WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282921
Code comments refer to `RethrowsException` which is misleading
https://bugs.webkit.org/show_bug.cgi?id=282921
Summary
Code comments refer to `RethrowsException` which is misleading
Keith Cirkel
Reported
2024-11-11 01:35:58 PST
Should be `RethrowException`
Attachments
Add attachment
proposed patch, testcase, etc.
Keith Cirkel
Comment 1
2024-11-11 01:37:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36479
EWS
Comment 2
2024-11-11 07:39:11 PST
Committed
286431@main
(91f64afd1f31): <
https://commits.webkit.org/286431@main
> Reviewed commits have been landed. Closing PR #36479 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-11 07:42:13 PST
<
rdar://problem/139648491
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug