Replace comments with `[RethrowsException]` -> `[RethrowException]` https://bugs.webkit.org/show_bug.cgi?id=282921

Reviewed by Anne van Kesteren.

Having `[RethrowsException]` in the comments is misleading as the
annotation is `[RethrowException]`.

* Source/WebCore/dom/InternalObserverEvery.cpp:
* Source/WebCore/dom/InternalObserverFilter.cpp:
* Source/WebCore/dom/InternalObserverFind.cpp:
* Source/WebCore/dom/InternalObserverForEach.cpp:
* Source/WebCore/dom/InternalObserverMap.cpp:
* Source/WebCore/dom/InternalObserverSome.cpp:
* Source/WebCore/dom/Observable.cpp:
(WebCore::Observable::subscribeInternal):

Canonical link: https://commits.webkit.org/286431@main