Source/WebCore/dom/InternalObserverFilter.cpp
@@ -95,7 +95,7 @@ private:
         auto matches = false;
 
         // The exception is not reported, instead it is forwarded to the
-        // error handler. As such, PredicateCallback `[RethrowsException]`
+        // error handler. As such, PredicateCallback has `[RethrowException]`
         // and here a catch scope is declared so the error can be passed
         // to the subscription error handler.
         JSC::Exception* previousException = nullptr;
